# Click

./: .gitignore  ARCHITECTURE.md  BUILD.md  Cargo.toml  README.md  config.toml.example  errors.txt  index.html  run.sh
benches/: inference_bench.rs
src/: camera.rs  config.rs  detection.rs  lib.rs  main.rs  metrics.rs  model.rs  night_vision.rs  recording.rs  tests.rs  types.rs
src/app/: application.rs  mod.rs
src/app/components/: camera_controls.rs  color_correction.rs  detection_overlay.rs  metrics_panel.rs  mod.rs  model_selector.rs  night_vision.rs  recording_indicator.rs  tag_manager.rs  tolerance_slider.rs  video_feed.rs
src/app/pages/: camera.rs  dashboard.rs  mod.rs  models.rs  settings.rs  tags.rs
src/web/: handlers.rs  mod.rs  websocket.rs
style/: main.scss
