[package]
name = "person-detect"
version = "1.0.0"
edition = "2021"
rust-version = "1.75"
authors = ["Production Team"]
description = "Real-time person detection using YOLO12n and tract_onnx"
license = "MIT"

[workspace]
members = ["."]
resolver = "2"

[profile.dev]
opt-level = 2

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

# cargo-leptos 0.3.x requires this format for a single-package project
[[workspace.metadata.leptos]]
name = "person-detect"
bin-package = "person-detect"
lib-package = "person-detect"
bin-features = ["ssr"]
lib-features = ["csr"]
output-name = "person-detect"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "style/main.scss"
assets-dir = "public"
site-addr = "127.0.0.1:3000"
reload-port = 3001
env = "DEV"

[dependencies]
# Serialization (shared between SSR and WASM)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging (shared)
tracing = "0.1"

# Error handling (shared)
thiserror = "1.0"
anyhow = "1.0"

# Utilities (shared)
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde", "js"] }

# Web Framework - Leptos 0.8 (shared)
leptos = { version = "0.8" }
leptos_router = { version = "0.8" }
leptos_meta = { version = "0.8" }

# WASM / Client-side (shared, compile on both targets)
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console", "Window", "Document", "HtmlElement", "HtmlInputElement", "HtmlSelectElement", "HtmlImageElement", "WebSocket", "MessageEvent", "BinaryType", "HtmlCanvasElement", "CanvasRenderingContext2d", "File", "FileList", "Event"] }

# WASM-only (optional, activated by hydrate feature)
wasm-bindgen-futures = { version = "0.4", optional = true }
reqwasm = { version = "0.5", optional = true, features = ["json"] }
gloo-timers = { version = "0.3", optional = true, features = ["futures"] }
console_error_panic_hook = { version = "0.1", optional = true }

# SSR / Backend-only dependencies (non-WASM)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.35", features = ["full", "rt-multi-thread"] }
tokio-util = "0.7"
tokio-stream = "0.1"
rayon = "1.8"
tract-onnx = "0.21"
tract-core = "0.21"
tract-nnef = "0.21"
opencv = { version = "0.98", default-features = false, features = ["videoio", "imgproc", "imgcodecs"] }
leptos_axum = { version = "0.8" }
axum = { version = "0.8", features = ["ws", "multipart"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "cors", "compression-gzip"] }
futures = "0.3"
futures-util = "0.3"
bytes = "1.5"
toml = "0.8"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
nalgebra = "0.33"
base64 = "0.22"

# WASM target dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1.35", default-features = false, features = ["rt", "time", "sync", "macros"] }

[dev-dependencies]
tempfile = "3.9"
mockall = "0.12"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "inference_bench"
harness = false

[lib]
name = "person_detect"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "person-detect"
path = "src/main.rs"

[features]
default = ["ssr"]
ssr = ["leptos/ssr", "leptos_router/ssr", "leptos_meta/ssr"]
hydrate = ["leptos/hydrate", "dep:wasm-bindgen-futures", "dep:reqwasm", "dep:gloo-timers", "dep:console_error_panic_hook"]
csr = ["leptos/csr", "dep:wasm-bindgen-futures", "dep:reqwasm", "dep:gloo-timers", "dep:console_error_panic_hook"]
